// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package files;

import "mojo/core/time.proto";

option go_package = "github.com/fuzzstan/files/go/pkg/files;files";
option java_multiple_files = true;
option java_outer_classname = "FilesProto";
option java_package = "files";

message File {
    string id = 1;
    string name = 2;
    int64 size = 10;
    string permalink = 15;
    mojo.core.Timestamp date_added = 100;
    mojo.core.Timestamp last_updated = 101;
    bool is_deleted = 102;
}